[package]
name = "dzi"
version = "0.2.3"
edition = "2021"
authors = ["n-k <nipunkumar@outlook.com>"]
description = "Rust crate and command line utility for deep zom images (DZI)"
homepage = "https://github.com/n-k/dzi"
repository = "https://github.com/n-k/dzi"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1"
thiserror = "1"
image = "0.25"

[dev-dependencies]
temp-dir = "0.1.13"
